--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="The Shitty List" />
         <meta property="og:description" content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
         <meta property="og:url" content="https://tsl.pages.dev" />
-        <meta property="og:image" content="/favicon.ico" />
+        <meta property="og:image" content="/tsl_icon.png" />
         <title>The Shitty List</title>
         <link rel="icon" href="/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
