--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </router-link>
             <div class="nav__actions">
                 <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
-                    <img src="/assets/discord.svg" alt="Discord Logo" />
+                    <img src="https://cdn.discordapp.com/attachments/715267286004531283/1091275438308982825/emoji.png" alt="Discord Logo" />
                 </a>
                 <a class="nav__cta type-label-lg"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
