--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
     <meta property="og:url" content="https://tsl.pages.dev" />
     <meta property="og:image" content="/tsl_icon.png" />
-    <title>The Shitty List</title>
+    <title>The 2P Demon List</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -66,11 +66,11 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                    <a class="nav__icon" href="https://discord.gg/y54vP3m5Zn">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a class="nav__cta type-label-lg"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
+                        href="https://discord.gg/y54vP3m5Zn"
                         target="_blank">Submit Record</a>
                 </div>
             </nav>
