--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
     <meta property="og:url" content="https://tsl.pages.dev" />
     <meta property="og:image" content="/tsl_icon.png" />
-    <title>The 2P Demon List</title>
+    <title>The 2P Challenge List</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
