--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
-    <meta property="og:title" content="The Shitty List" />
+    <meta property="og:title" content="The 2P Demon List" />
     <meta property="og:description"
-        content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
+        content="The List That Lists The Hardest 2P Challenges Beaten SOLO" />
     <meta property="og:url" content="https://tsl.pages.dev" />
     <meta property="og:image" content="/tsl_icon.png" />
     <title>The 2P Challenge List</title>
