--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
-    <meta property="og:title" content="The 2P Demon List" />
+    <meta property="og:title" content="The Goofy Ahh Demon List" />
     <meta property="og:description"
-        content="The List That Lists The Hardest 2P Challenges Beaten SOLO" />
+        content="The List That Lists" />
     <meta property="og:url" content="https://tsl.pages.dev" />
     <meta property="og:image" content="/tsl_icon.png" />
-    <title>The 2P Challenge List</title>
+    <title>The Goofy Ahh Challenge List</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
