--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="logo">
                 <img v-if="store.shitty" src="assets/april-logo.png" alt="TSL Logo" />
                 <div v-else class="logo">
-                    <h2>T2CL</h2>
+                    <h2>GACL</h2>
                     <p>v1.7.0</p>
                 </div>
             </div>
