--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
-    <meta property="og:title" content="The Goofy Ahh Demon List" />
+    <meta property="og:title" content="The LorerGDPS Demon List" />
     <meta property="og:description"
         content="The List That Lists" />
     <meta property="og:url" content="https://tsl.pages.dev" />
     <meta property="og:image" content="/tsl_icon.png" />
-    <title>The Goofy Ahh Challenge List</title>
+    <title>The LorerGDPS DemonList</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,8 +33,8 @@
             <div class="logo">
                 <img v-if="store.shitty" src="assets/april-logo.png" alt="TSL Logo" />
                 <div v-else class="logo">
-                    <h2>GACL</h2>
-                    <p>v1.7.0</p>
+                    <h2>LorerGDPS</h2>
+                    <p>v2.1</p>
                 </div>
             </div>
             <nav class="nav">
@@ -66,11 +66,11 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/y54vP3m5Zn">
+                    <a class="nav__icon" href="https://discord.com/invite/nUMscJGvQX">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a class="nav__cta type-label-lg"
-                        href="https://discord.gg/y54vP3m5Zn"
+                        href="https://discord.com/invite/nUMscJGvQX"
                         target="_blank">Submit Record</a>
                 </div>
             </nav>
