--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta property="og:title" content="The LorerGDPS Demon List" />
     <meta property="og:description"
         content="The List That Lists" />
-    <meta property="og:url" content="https://tsl.pages.dev" />
-    <meta property="og:image" content="/tsl_icon.png" />
+    <meta property="og:url" content="https://lorer.in" />
+    <meta property="og:url" content="http://zfusiongdps.alwaysdata.net/lorer.png" />
     <title>The LorerGDPS DemonList</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
