--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <router-link class="nav__tab" to="/roulette">
                     <span class="type-label-lg">Roulette</span>
                 </router-link>
+                <router-link class="nav__tab" to="/list-packs">
+                    <span class="type-label-lg">Packs</span>
+                </router-link>
                 <div class="nav__actions">
                     <button
                         class="nav__icon toggle-shitty"
