--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
-    <meta property="og:title" content="The LorerGDPS Demon List" />
+    <meta property="og:title" content="The Shitty List" />
     <meta property="og:description"
-        content="The List That Lists" />
-    <meta property="og:url" content="https://lorer.in" />
-    <meta property="og:url" content="http://zfusiongdps.alwaysdata.net/lorer.png" />
-    <title>The LorerGDPS DemonList</title>
+        content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
+    <meta property="og:url" content="https://tsl.pages.dev" />
+    <meta property="og:image" content="/tsl_icon.png" />
+    <title>The Shitty List</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="/css/pages/list.css" />
     <link rel="stylesheet" type="text/css" href="/css/pages/leaderboard.css" />
     <link rel="stylesheet" type="text/css" href="/css/pages/roulette.css" />
+    <link rel="stylesheet" type="text/css" href="/css/pages/listpacks.css" />
     <link rel="stylesheet" type="text/css" href="/css/components/nav.css" />
     <link rel="stylesheet" type="text/css" href="/css/components/btn.css" />
     <link rel="stylesheet" type="text/css" href="/css/components/tabs.css" />
@@ -33,8 +34,8 @@
             <div class="logo">
                 <img v-if="store.shitty" src="assets/april-logo.png" alt="TSL Logo" />
                 <div v-else class="logo">
-                    <h2>LorerGDPS</h2>
-                    <p>v2.1</p>
+                    <h2>TSL</h2>
+                    <p>v1.8.0</p>
                 </div>
             </div>
             <nav class="nav">
@@ -69,11 +70,11 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.com/invite/nUMscJGvQX">
+                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a class="nav__cta type-label-lg"
-                        href="https://discord.com/invite/nUMscJGvQX"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
                         target="_blank">Submit Record</a>
                 </div>
             </nav>
