--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
-    <meta property="og:title" content="The Shitty List" />
+    <meta property="og:title" content="The LorerGDPS Demonlist" />
     <meta property="og:description"
-        content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
-    <meta property="og:url" content="https://tsl.pages.dev" />
+        content="The list that Lists" />
+    <meta property="og:url" content="https://demonlist.lorer.in/" />
     <meta property="og:image" content="/tsl_icon.png" />
     <title>The Shitty List</title>
     <link rel="icon" href="/favicon.ico" />
@@ -70,11 +70,11 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                    <a class="nav__icon" href="https://discord.com/invite/vxW5eUdcGh">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a class="nav__cta type-label-lg"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
+                        href="https://discord.com/invite/vxW5eUdcGh"
                         target="_blank">Submit Record</a>
                 </div>
             </nav>
