--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="The list that Lists" />
     <meta property="og:url" content="https://demonlist.lorer.in/" />
     <meta property="og:image" content="/tsl_icon.png" />
-    <title>The Shitty List</title>
+    <title>The LorerGDPS DemonList</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,10 +32,10 @@
     <div class="root" :class="{ dark: store.dark, shitty: store.shitty }">
         <header class="surface">
             <div class="logo">
-                <img v-if="store.shitty" src="assets/april-logo.png" alt="TSL Logo" />
+                <img v-if="store.shitty" src="assets/april-logo.png" alt="Bro Internet 💀" />
                 <div v-else class="logo">
-                    <h2>TSL</h2>
-                    <p>v1.8.0</p>
+                    <h2>LorerGDPS</h2>
+                    <p>v2.101</p>
                 </div>
             </div>
             <nav class="nav">
