--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="root" :class="{ dark: store.dark, shitty: store.shitty }">
         <header class="surface">
             <div class="logo">
-                <img v-if="store.shitty" src="assets/April-logo.png" alt="Bro Internet 💀" />
+                <img v-if="store.shitty" src="assets/Aprtil-logo.png" alt="o am not going to fix" />
                 <div v-else class="logo">
                     <h2>LorerGDPS</h2>
                     <p>v2.101</p>
